--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ChatNotification.NotificationFragment">
+    android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_notification" />
 
-    <LinearLayout
+    <com.eschao.android.widget.elasticlistview.ElasticListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="100dp">
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:background="@null"
+        android:cacheColorHint="#00000000"
+        android:listSelector="#00000000"
+        android:dividerHeight="1px"
+        android:scrollbars="none"
+        android:id="@+id/listView"
+        android:overScrollMode="never"
+        android:fadingEdge="none"
+        android:divider="@null"/>
 
-        <include
-            layout="@layout/snippet_notification_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-        <include
-            layout="@layout/snippet_notification_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           />
-    </LinearLayout>
-
-</FrameLayout>
+</RelativeLayout>
