--- a/app/src/main/res/layout/layout_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/layout_mainfeed_listitem.xml
@@ -60,7 +60,7 @@
         </RelativeLayout>
 
 
-        <com.example.uiaplycation.Utils.SquareImageView
+        <com.bbinkconnect.bbinktattoo.Utils.SquareImageView
             android:id="@+id/post_image"
             android:layout_width="match_parent"
             android:layout_height="300dp"
