--- a/app/src/main/res/layout/layout_grid_imageview.xml
+++ b/app/src/main/res/layout/layout_grid_imageview.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <com.example.uiaplycation.Utils.SquareImageView
+    <com.bbinkconnect.bbinktattoo.Utils.SquareImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
