--- a/app/src/main/res/layout/snippet_chat_user.xml
+++ b/app/src/main/res/layout/snippet_chat_user.xml
@@ -5,11 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="right">
+        android:layout_gravity="right"
+        android:layout_marginTop="30dp">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -38,6 +38,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout >
 
 </merge>
