--- a/app/src/main/res/layout/snippet_reply_chat.xml
+++ b/app/src/main/res/layout/snippet_reply_chat.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
 
-    <android.support.v7.widget.CardView
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="14dp"
@@ -84,5 +84,5 @@
         </RelativeLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.appcompat.widget.Toolbar>
 </RelativeLayout>
