--- a/app/src/main/res/layout/snippet_top_profilebar.xml
+++ b/app/src/main/res/layout/snippet_top_profilebar.xml
@@ -1,12 +1,12 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="#ffff">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/profileToolBar">
@@ -39,10 +39,10 @@
             </RelativeLayout>
 
 
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
 
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
 </merge>
