Update for upload

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home.HomeActivity">
+    tools:context=".home.HomeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -44,9 +43,7 @@
 
             </RelativeLayout>
 
-
         </androidx.appcompat.widget.Toolbar>
-
 
         <TextView
             android:id="@+id/display_name"
@@ -81,14 +78,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
         </RelativeLayout>
 
         <!-- bottom navigation -->
         <include layout="@layout/layout_bottom_navigation_view"/>
 
-
     </RelativeLayout>
 
 
-</RelativeLayout>
+ </RelativeLayout>
