--- a/app/src/main/res/layout/activity_chat_notification.xml
+++ b/app/src/main/res/layout/activity_chat_notification.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home.ChatNotificationActivity">
+    tools:context=".home.ChatNotificationActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
