--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -54,7 +54,7 @@
 
             </RelativeLayout>
 
-            <com.bbinkconnect.bbinktattoo.Utils.SquareImageView
+            <com.bbinkconnect.bbinktattoo.utils.SquareImageView
                 android:id="@+id/post_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
