--- a/app/src/main/res/layout/snippet_reply_chat.xml
+++ b/app/src/main/res/layout/snippet_reply_chat.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Pia Esspunkt"
+                android:text="@string/pia_esspunkt"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_toEndOf="@id/chaticon"/>
 
@@ -67,17 +67,16 @@
                 android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:layout_alignParentBottom="true"
-                android:background="@color/grey_bright"
-                >
+                android:background="@color/grey_bright">
 
                 <EditText
                     android:id="@+id/editText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Write a message" />
+                    android:text="@string/write_a_message"/>
             </LinearLayout>
 
 
