--- a/app/src/main/res/layout/layout_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_view.xml
@@ -11,8 +11,8 @@
             android:layout_height="match_parent"
             android:id="@+id/bottomNavViewBar"
             android:background="@drawable/white_grey_border_top"
-            app:menu="@menu/menu_navigation_with_view_pager">
-            app:itemIconTint="@drawable/tint_color"
+            app:menu="@menu/menu_navigation_with_view_pager"
+            app:itemIconTint="@drawable/tint_color">
 
         </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>
 
