--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#e56329</color>
     <color name="colorAccent">#e56329</color>
     <color name="selector_item_color">#000000</color>
-
+<color name="black">#000000</color>
     <color name="grey">#bfbfbf</color>
     <color name="grey_bright">#EEEEEE</color>
     <color name="white">#fff</color>
