--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,22 +26,33 @@
 
                 <SearchView
                     android:id="@+id/searchView_home"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="357dp"
+                    android:layout_height="52dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="0dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_toStartOf="@+id/imageButton2"
                     android:background="@drawable/searchview_bg" />
 
                 <ImageButton
                     android:id="@+id/btnLaunchCamera"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginEnd="20dp"
-                    android:background="@color/transparent"
+                    android:layout_alignEnd="@+id/searchView_home"
+                    android:layout_marginEnd="9dp"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="@color/transparent"
                     android:src="@drawable/ic_camera" />
+
+                <ImageButton
+                    android:id="@+id/imageButton2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="@color/transparent"
+                    app:srcCompat="@drawable/ic_ellipses" />
 
             </RelativeLayout>
 
