--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -47,32 +47,35 @@
         android:layout_above="@id/bottom"/>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:padding="5dp"
         android:id="@+id/bottom"
-        android:background="#fff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content">
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/roundedbuttonchat"
+        android:padding="5dp">
 
         <EditText
+            android:id="@+id/text_send"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/text_send"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:layout_toLeftOf="@id/btn_send"
             android:background="@android:color/transparent"
             android:hint="Type a message..."
-            android:layout_toLeftOf="@id/btn_send"
-            android:layout_centerVertical="true"/>
-
-
-        <!-- Ic Share Black! -->
+            android:textSize="20sp" />
 
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/ic_share_black"
             android:id="@+id/btn_send"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/ic_share_black" />
 
     </RelativeLayout>
 
