--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,15 +60,15 @@
         android:text="Register"
         android:id="@+id/register"
         android:textColor="@color/white"
-        android:background="@drawable/ic_next"/>
+        android:background="@drawable/roundedbutton"/>
 
 
     <TextView
+        android:id="@+id/txt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already have an sccount? Log in"
-        android:id="@+id/txt_login"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="Already have an account? Log in" />
 
 </LinearLayout>
 
