--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -32,13 +32,13 @@
         android:background="@color/selector_item_color"/>
 
     <TextView
+        android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Log Out"
-        android:id="@+id/logout"
-        android:textColor="@color/selector_item_color"
         android:layout_margin="8dp"
-        android:textSize="18sp"/>
+        android:text="@string/Log_Out"
+        android:textColor="@color/selector_item_color"
+        android:textSize="18sp" />
 
     <View
         android:layout_width="match_parent"
