--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -29,13 +29,26 @@
             android:padding="8dp"
             android:layout_alignParentRight="true" />
 
-        <TextView
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txt_seen"
             android:layout_below="@id/show_message"
+            android:src="@drawable/ic_tick_grey"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_not_seen"
+            android:layout_below="@id/show_message"
+            android:src="@drawable/ic_tick_green"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
