--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,13 +24,13 @@
                 android:src="@drawable/ic_search"/>
 
             <EditText
+                android:id="@+id/search_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:id="@+id/search_bar"
-                android:hint="Search..."
-                android:layout_marginStart="10dp" />
+                android:background="@android:color/transparent"
+                android:hint="@string/Search" />
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
