--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
                 <SearchView
                     android:id="@+id/searchView_home"
-                    android:layout_width="357dp"
+                    android:layout_width="match_parent"
                     android:layout_height="52dp"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="8dp"
