--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -15,11 +15,11 @@
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:srcCompat="@drawable/ic_share"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="14sp"
         android:layout_marginBottom="8dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"/>
+        android:clickable="true"
+        app:srcCompat="@drawable/ic_share" />
 
 </RelativeLayout>
