--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:padding="8dp"
     android:layout_height="wrap_content"
@@ -16,7 +15,6 @@
         android:layout_marginBottom="4dp">
 
 
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -27,10 +25,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linid"
-        android:layout_toRightOf="@id/image_profile"
         android:layout_toEndOf="@id/image_profile"
-        android:layout_marginLeft="5dp"
         android:layout_centerVertical="true"
         android:orientation="vertical"
         android:layout_marginStart="5dp">
@@ -38,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="username"
+            android:text="@string/username"
             android:id="@+id/username"
             android:maxLines="1"
             android:textStyle="bold"
@@ -49,7 +44,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/fullname"
             android:maxLines="1"
-            android:text="Full Name"/>
+            android:text="@string/full_name"/>
 
     </LinearLayout>
 
